--- a/templates/therapy/scheme/create.html.twig
+++ b/templates/therapy/scheme/create.html.twig
@@ -192,28 +192,24 @@
 
 window.addEventListener('beforeunload', function (event) {
     // Custom logic for when the user closes the tab
-    if (sessionStorage.getItem('isPageOpen') === 'true') {
+    if (sessionStorage.getItem('ListenClosingPage') === 'true') {
         console.log('Tab is being closed!');
-        // Perform your custom logic here, like saving data or sending analytics
+        event.preventDefault();
     } else {
         console.log('Page is refreshing or navigating away');
     }
-
-    // Remove the default browser confirmation dialog
-    event.preventDefault(); // This prevents the default action but won't show the confirmation
-    // Do not include `event.returnValue = '';` to avoid showing the default dialog.
 });
 
 // When the page is refreshed, remove the flag
 window.addEventListener('unload', function () {
-    sessionStorage.removeItem('isPageOpen');
+    sessionStorage.removeItem('ListenClosingPage');
 });
     
 let selectedLabels = [];
 $(document).ready(function () {
     
     // Set a flag in sessionStorage when the page is loaded
-    sessionStorage.setItem('isPageOpen', 'true');
+    sessionStorage.setItem('ListenClosingPage', 'true');
 
     $("#therapy_scheme_labels")
         .select2({
@@ -876,6 +872,10 @@ function setupPagination(tableId, rowsPerPage) {
     });
 
 	$("#saveAsTemplateButton").click(function () {
+
+        // Set a flag in sessionStorage when the save button is clicked
+        sessionStorage.setItem('ListenClosingPage', 'false');
+
         // * Get the comments and set them to the hidden input
         const comments = getCurrentComments();
         const commentsInput = document.getElementById("therapy_scheme_comments");
