add the duplicate function in the edit page of the stub and the stub listing page

--- a/templates/therapy/stub/list.html.twig
+++ b/templates/therapy/stub/list.html.twig
@@ -84,6 +84,8 @@
                         </a>
                     </th>                                               
                     <th>Edit</th>
+                    <th>{{'app-duplicate-button'|trans}}</th>
+
                 </tr>
             </thead>
             <tbody>
@@ -96,6 +98,9 @@
                         <td>{{ stub.background[:40]|raw }}{{ stub.background|length > 40 ? '...' : '' }}</td>
                         <td>
                             <a href="{{ path('app_therapy_stub_edit', {id: stub.id}) }}" class="btn btn-primary">Edit</a>
+                        </td>
+                        <td>
+                            <a href="{{ path('app_therapy_stub_duplicate', {id: stub.id}) }}" class="btn btn-primary">{{'app-duplicate-button'|trans}}</a>
                         </td>
                     </tr>
                 {% endfor %}
